Make fields public, impl serde

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ edition = "2021"
 
 [dependencies]
 reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
+serde = { version = "1", features = ["derive"] }
+bytes = { version = "1", features = ["serde"] }
 
 [dev-dependencies]
 json = "0.12"
