Postgrest::new_with_client

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ categories = ["development-tools"]
 edition = "2021"
 
 [dependencies]
-reqwest = { version = ">= 0.11", default-features = false, features = ["rustls-tls"] }
+reqwest = { version = "0.12" }
 serde = { version = "1", features = ["derive"] }
 bytes = { version = "1", features = ["serde"] }
 
